@@ -1,3 +1,6 @@
+2006-12-01  Alex Roitman  <shura@gramps-project.org>
+	* sk/sk.po: Typo.
+
 2006-11-29  Lubo Vasko  <pgval@post.sk>
 	* sk/sk.po: Translation update.
 
