@@ -6,6 +6,7 @@
 	parents in case the toolbar is not visible.
 
 2006-12-01  Alex Roitman  <shura@gramps-project.org>
+	* src/plugins/Check.py (fix_encoding): Fix mime type string.
 	* src/Filters/Rules/_RuleUtils.py (loose_date_cmp): Compare
 	textual dates.
 	* src/Filters/Rules/_HasEventBase.py (apply): Do not match empty
